[package]
name = "aptos-trader"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "Implement most of the commonly used practical transaction-related functions of the Aptos network."
keywords = ["trade", "crypto", "finance", "aptos"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/solana-trader"

[dependencies]
